# IPA_SW

./: README.md  demo.py  pyproject.toml
tests/: test_watermarking.py
watermarking/: __init__.py  base_convert.py  controller.py  crypto.py  difference_expansion.py  encoder.py  graph.py  wrap.py
