[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "param-auth-dynamic-watermark"
version = "0.1.0"
description = "Reference implementation of input-parameter authentication via dynamic software watermarking."
requires-python = ">=3.10"
dependencies = []
